# cosmic_eyes

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  OPTIMIZATIONS.md  README.md  RELEASE_NOTES.md  TESTING.md  WHAT_WORKS.md  config.example.ron  justfile
res/: cosmic-eyes.desktop
src/: config.rs  dbus.rs  idle.rs  main.rs  notify.rs  timer.rs
src/applet/: mod.rs
src/break_screen/: mod.rs
src/cli/: main.rs
