[package]
name = "cosmic-eyes"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Break reminder tool for COSMIC Desktop to prevent eye strain and promote healthy work habits"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# COSMIC toolkit
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet", "tokio"] }

# CLI interface
clap = { version = "4.5", features = ["derive"] }

# Async runtime - optimized features
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization for config
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

# Time handling
chrono = "0.4"

# System integration - D-Bus for IPC
zbus = "4.0"

# Logging - only subscriber needed
tracing-subscriber = "0.3"

# Directories
dirs = "5.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
incremental = true

[[bin]]
name = "cosmic-eyes"
path = "src/main.rs"

[[bin]]
name = "cosmic-eyes-cli"
path = "src/cli/main.rs"
